--- a/KeyAll.csproj
+++ b/KeyAll.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FlaUI.Core" Version="4.0.0" />
     <PackageReference Include="FlaUI.UIA2" Version="4.0.0" />
     <PackageReference Include="FlaUI.UIA3" Version="4.0.0" />
+    <PackageReference Include="MSBuild.ILMerge.Task" Version="1.1.3" />
   </ItemGroup>
 
 </Project>
