--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "KeyAll": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-cli"
     }
   }
 }
